# fastapi-poetry-starter

./: .env.dev  .gitignore  README.md  app.sh  pyproject.toml
com/crack/snap/make/: app.py  config.py  containers.py  di.py
com/crack/snap/make/model/: __init__.py  user_form.py
com/crack/snap/make/routes/: app_routes.py
com/crack/snap/make/services/: api_service.py  file_processing_service.py
com/crack/snap/make/static/css/: styles.css
com/crack/snap/make/static/files/: Zeno - AI IT Smart Agent.pptx
com/crack/snap/make/static/scripts/: script.js
com/crack/snap/make/templates/: index.html
com/crack/snap/make/utils/: http_client.py  session_store.py  utility.py
